Actually fixing code block word wrapping.

--- a/public/css/front-end/blog.styl
+++ b/public/css/front-end/blog.styl
@@ -153,6 +153,7 @@ h6, .h6
 .blog-main pre code
   color #93a1a1
   word-wrap initial
+  white-space inherit
 
   span
     white-space nowrap
